--- a/views/src/css/header.css
+++ b/views/src/css/header.css
@@ -20,7 +20,7 @@ a.navbar-brand{
 
 .navbar-nav > li:first-child {
     padding-left: 10px;
-    border-left : 1px solid #e8e8e8;
+    border-left : none;
 }
 
 
@@ -36,7 +36,7 @@ a.navbar-brand{
 }
 
 .navbar-default .navbar-nav > li > a {
-    padding: 25px 15px;
+    padding: 25px 10px;
     font-size: 13px;
     text-transform: uppercase;
 }
@@ -48,9 +48,28 @@ div.revolution-starhotel span{
     padding-left: initial;
 }
 
+#a_logo div p {
+    margin-bottom: 10px;
+}
+
+@media (min-width: 768px){
+    .navbar.shrink .navbar-nav > li > a {
+        padding-top: 22px;
+        padding-bottom: 22px;
+        font-size: 13px;
+        -webkit-transition: all linear 0.3s;
+        -moz-transition: all linear 0.3s;
+        -o-transition: all linear 0.3s;
+        transition: all linear 0.3s;
+    }
+}
 @media screen and (max-width: 1275px)and (min-width: 768px) {
     a.navbar-brand{
         width: 100%;
+    }
+
+    #menuMovil{
+        margin-top : 15px;
     }
     .navbar-header{
         width: 100%;
@@ -75,10 +94,10 @@ div.revolution-starhotel span{
 }
 
 @media (min-width: 768px){
-.navbar-nav {
-    float: left;
-    margin-top: 10px;
-}
+    .navbar-nav {
+        float: left;
+        margin-top: 0px;
+    }
 }
 @media screen and (max-width: 768px) {
     a.navbar-brand{
@@ -98,16 +117,23 @@ div.revolution-starhotel span{
 #a_logo{
     padding-top : initial;
     padding-bottom : initial;
+    margin-bottom : 10px;
+    margin-top : -5px;
 }
 
 #a_logo div p {
-    margin-bottom: 0px;
+    margin-bottom: 15px;
 }
 
 @media (max-width: 767px){
     .navbar-default .navbar-nav > li > a {
         padding: 10px 15px 10px 15px;
     }
+
+    #sticky, #sticky2, #a_logo{
+        max-height: 70px!important;
+    }
+
 
     #a_logo{
         padding-top : 0px;
