Se soluciona menu , y css de estos 2

--- a/views/src/css/header.css
+++ b/views/src/css/header.css
@@ -130,7 +130,7 @@ div.revolution-starhotel span{
         padding: 10px 15px 10px 15px;
     }
 
-    #sticky, #sticky2, #a_logo{
+    #sticky, #a_logo{
         max-height: 70px!important;
     }
 
