--- a/views/src/css/theme.css
+++ b/views/src/css/theme.css
@@ -578,20 +578,27 @@ header nav {
 	color: #5e5e5e;
 }
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-	background-color: transparent;
+	background-color: #2bc30b;
+	color: #ffffff !important;
+}
+
+.dropdown-toggle:hover{
+	background: #2bc30b !important;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-	background-color: transparent;
+	background-color: #2bc30b !important;
 }
 .navbar-default .navbar-nav > .disabled > a, .navbar-default .navbar-nav > .disabled > a:hover, .navbar-default .navbar-nav > .disabled > a:focus {
-	color: #5e5e5e;
-	background-color: transparent;
+	color: #ffffff !important;
+	background-color: #2bc30b !important;
 }
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
-	border-color: #e7e7e7;
+	border-color:#2bc30b !important;
+	color: #ffffff !important;
 }
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-	background-color: #fff;
+	background-color:#2bc30b !important;
+	color: #ffffff !important;
 }	
 .navbar-nav .dropdown-menu  {
 	border-top: 2px solid;
@@ -600,12 +607,23 @@ header nav {
 .navbar-default .navbar-nav .dropdown-menu > li > a {
 	color: #5e5e5e;
 }
-.navbar-default .navbar-nav .dropdown-menu > .active > a, .navbar-default .navbar-nav .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .dropdown-menu > .active > a:focus {
+.navbar-default .navbar-navdropdown-menu . > .active > a, .navbar-default .navbar-nav .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .dropdown-menu > .active > a:focus {
 	color: #ffffff;
 	text-decoration: none;
 	background-color: #428bca;
 	outline: 0;
 }
+.dropdown-menu > li > a:hover{
+	background: #2bc30b !important;
+	color: #ffffff !important;
+}
+
+.dropdown-menu > li:hover{
+	background: #2bc30b !important;
+	color: #ffffff !important;
+}
+
+
 .navbar-default .navbar-nav .dropdown-menu > .disabled > a, .navbar-default .navbar-nav .dropdown-menu > .disabled > a:hover, .navbar-default .navbar-nav .dropdown-menu > .disabled > a:focus {
 	color: #999999;
 }
