--- a/views/src/css/theme.css
+++ b/views/src/css/theme.css
@@ -2157,3 +2157,19 @@ border: 1px solid;
 	padding: 0;
 	width: 100%;
 }
+.bosconia, .bosconia_ico{
+	width: 70%;
+	height: 70%;
+	margin: 0 12%;
+}
+
+.bosconia_ico{
+	width: 60%;
+	height: 60%;
+	margin: 0 18%;
+}
+
+.bosconia_ico_2{
+	width: 70%;
+	height: 70%;
+}
